--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -20,7 +20,7 @@
                     <div class="card-body">
                         <h5 class="card-title text-center">Who We Are</h5>
                         <p class="card-text text-center">
-                            Clear Trail CA is a project driven by our shared passion for the great outdoors. We are a team of dedicated individuals who believe that everyone should have the opportunity to explore the stunning hiking trails of Canada. Our mission is to provide a platform that not only showcases these beautiful trails but also empowers outdoor enthusiasts with real-time air quality data to ensure safe and enjoyable adventures.
+                            Clear Trail CA is a project driven by our shared passion for the great outdoors. We are a team of dedicated individuals who believe that everyone should have the opportunity to explore the stunning hiking trails of Canada. Our mission is to provide a platform that not only showcases these beautiful trails but also empowers outdoor enthusiasts with real-time air quality data to ensure safe and enjoyable adventures.XZ
                         </p>
                     </div>
                 </div>
